<resources>
    <string name="app_name" translatable="false">X RView App</string>
    <string name="app_greeting_01">Welcome To This World</string>
    <string name="stg_btn_greeting_change">Change Greeting</string>
    <string name="app_greeting_02">Please Leave Now</string>
    <string name="stg_firstname_def">Firstname:</string>
    <string name="stg_lastname_def">Lastname:</string>
    <string name="btn_start_personact">Single Person</string>
    <string name="stg_age_label">Age:</string>
    <string name="stg_gender_label">Gender:</string>
    <string name="app_list_act_name" translatable="false">List Activity. type:</string>
    <string name="stg_btn_rvlist_label">RView List</string>
    <string name="stg_btn_cvpersons_label">CView Listing</string>
    <string name="stg_inprogress">In Progress..</string>
    <string name="stg_btn_async_persons_label">ASYCN LIST</string>
    <string name="stg_person_img">Person Image</string>
    <string name="stg_adding_entry">processing new...</string>
    <string name="stg_btn_persons2_label">Async List 2</string>
    <string name="btn_async_bills_label">BILLS</string>
    <string name="title_activity_bills_tab">BillsTabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="stg_btn_bills_tab_label">BILLS TABED</string>
    <string name="stg_bill_img">Bill Entry</string>
    <string name="stg_billname_label">Bill Name:</string>
    <string name="stg_billinv_label">Invoice:</string>
    <string name="stg_amntdue_label">Amount:</string>
    <string name="stg_expdate_label">Due Date:</string>
    <string name="menu_bill_edit">Edit Bill</string>
    <string name="stg_menu_bill_edit">Edit Bill</string>
    <string name="stg_menu_bill_save">Save Bill</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="stg_btn_notes_label">Notes</string>
    <string name="stg_note_img_desc">Note Image</string>
    <string name="stg_note_details_sample">These are the note details.  These should get truncated after several characters.</string>
    <string name="stg_menu_note_edit">Edit Note</string>
    <string name="stg_menu_notelist_save">Save List</string>
    <string name="stg_menu_notelist_edit">Edit List</string>
    <string name="title_activity_note_detail">NoteDetailActivity</string>
    <string name="stg_note_name_label">Note:</string>
    <string name="stg_note_details_label">Comments</string>
    <string name="stg_note_date_label">Date:</string>
    <string name="stg_notemod_date_label">Modified:</string>
</resources>
