<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.avilagroup.dev.x_rview_app.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_greeting_01"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_main_greeting"
        />

        <Button
            android:text="@string/stg_btn_greeting_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_main_greeting"
            android:layout_centerHorizontal="true"
            android:id="@+id/btn_greeting_change"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_weight="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">

            <Button
                android:text="@string/stg_btn_rvlist_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:id="@+id/btn_rv_persons"
                android:layout_weight="1" />

            <Button
                android:text="@string/stg_btn_cvpersons_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cvPersons"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/btn_rv_persons"
                android:layout_weight="1" />

            <Button
                android:text="@string/btn_start_personact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/btn_personlist"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_weight="1" />

        </LinearLayout>

        <Button
            android:text="@string/stg_btn_async_persons_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/btn_asy_persons_list" />

    </RelativeLayout>
</layout>
