<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.avilagroup.dev.x_rview_app.PersonBinding">

    <data>
        <variable
            name="person"
            type="com.avilagroup.dev.x_rview_app.model.Person"
            />
    </data>

    <RelativeLayout
        android:id="@+id/activity_person_binding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_gap">

        <TextView
            android:text="@string/stg_firstname_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFirstnameLabel"
            android:padding="@dimen/default_gap"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@{person.firstname}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFirstname"
            android:layout_toEndOf="@+id/tvFirstnameLabel"
            android:layout_alignBaseline="@id/tvFirstnameLabel" />

        <TextView
            android:text="@string/stg_lastname_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLastnameLabel"
            android:padding="@dimen/default_gap"
            android:layout_below="@+id/tvFirstnameLabel"/>

        <TextView
            android:text="@{person.lastname}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvLastnameLabel"
            android:layout_alignBaseline="@id/tvLastnameLabel"
            android:id="@+id/tvLastname" />

        <TextView
            android:text="@string/stg_age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvAgeLabel"
            android:layout_below="@+id/tvLastnameLabel"
            android:padding="@dimen/default_gap"
            android:layout_alignEnd="@+id/tvLastnameLabel" />

        <TextView
            android:text="@{String.valueOf(person.age)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tvAgeLabel"
            android:layout_alignBaseline="@id/tvAgeLabel"
            android:id="@+id/tvAge" />

        <TextView
            android:text="@string/stg_gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAgeLabel"
            android:padding="@dimen/default_gap"
            android:id="@+id/tvGenderLabel"
            android:layout_alignEnd="@+id/tvAgeLabel" />

        <TextView
            android:text="@{person.gender}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tvGenderLabel"
            android:layout_alignBaseline="@id/tvGenderLabel"
            android:id="@+id/tvGender" />
    </RelativeLayout>
</layout>