<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.avilagroup.dev.x_rview_app.notes.NoteDetailActivity">
    <data>
        <import type="android.view.View"/>
        <variable
            name="note"
            type="com.avilagroup.dev.x_rview_app.notes.model.NoteThingObs"/>
        <variable
            name="editMode"
            type="boolean"/>
        <variable
            name="stg_note_date"
            type="String"/>
        <variable
            name="stg_notemod_date"
            type="String"/>
    </data>
    <RelativeLayout
        android:id="@+id/content_note_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_gap"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_note_detail">

        <ImageView
            android:id="@+id/ivNote"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/notification_large_icon_height"
            app:srcCompat="@drawable/ic_assignment_black_48dp"
            android:scaleType="fitCenter"
            android:layout_below="@id/ivNote"
            android:tint="@color/colorPrimary"
            android:background="@color/cardview_light_background"
            android:contentDescription="@string/stg_note_img_desc" />

        <TextView
            android:id="@+id/tvNoteNameLabel"
            android:text="@string/stg_note_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_gap"
            android:layout_marginTop="54dp"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_marginStart="54dp"
            android:layout_below="@+id/ivNote"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/tvNoteName"
            android:text="@{note.name}"
            tools:text="note name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility='@{editMode ? View.INVISIBLE : View.VISIBLE}'
            android:textSize="18sp"
            android:layout_alignBaseline="@+id/tvNoteNameLabel"
            android:layout_alignBottom="@+id/tvNoteNameLabel"
            android:layout_toEndOf="@+id/tvNoteNameLabel" />
        <EditText
            android:id="@+id/etNoteName"
            android:hint="@{note.name}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility='@{editMode ? View.VISIBLE : View.INVISIBLE}'
            android:layout_alignBaseline="@+id/tvNoteNameLabel"
            android:layout_alignBottom="@+id/tvNoteNameLabel"
            android:layout_toEndOf="@+id/tvNoteNameLabel" />

        <TextView
            android:id="@+id/tvNoteDateLabel"
            android:text="@string/stg_note_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/item_icon_half_margin"
            android:textSize="12sp"
            android:textStyle="normal|bold"
            android:layout_below="@+id/tvNoteNameLabel"
            android:layout_alignEnd="@+id/tvNoteNameLabel" />
        <TextView
            android:id="@+id/tvNoteDate"
            android:text="@{stg_note_date}"
            tools:text="01/01/1990"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvNoteDateLabel"
            android:layout_alignBottom="@+id/tvNoteDateLabel"
            android:layout_toEndOf="@+id/tvNoteDateLabel" />

        <TextView
            android:id="@+id/tvNoteModDateLabel"
            android:text="@string/stg_notemod_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/item_icon_half_margin"
            android:textSize="12sp"
            android:textStyle="normal|bold"
            android:layout_below="@+id/tvNoteDateLabel"
            android:layout_alignEnd="@+id/tvNoteDateLabel" />
        <TextView
            android:id="@+id/tvNoteModDate"
            android:text="@{stg_notemod_date}"
            tools:text="01/01/1990"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvNoteModDateLabel"
            android:layout_alignBottom="@+id/tvNoteModDateLabel"
            android:layout_toEndOf="@+id/tvNoteModDateLabel" />

        <TextView
            android:id="@+id/tvNoteDetailLabel"
            android:text="@string/stg_note_details_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_gap"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_below="@+id/tvNoteModDateLabel"
            android:layout_alignEnd="@+id/tvNoteModDateLabel"/>
        <TextView
            android:id="@+id/tvNoteDetails"
            android:text="@{note.noteDetails}"
            tools:text="@string/stg_note_details_sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNoteDetailLabel"
            android:padding="@dimen/activity_vertical_margin"
            android:visibility='@{editMode ? View.INVISIBLE : View.VISIBLE}'  />
        <EditText
            android:id="@+id/etNoteDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textCapSentences"
            android:gravity="start"
            android:ems="10"
            android:layout_below="@id/tvNoteDetailLabel"
            android:visibility='@{editMode ? View.VISIBLE : View.INVISIBLE}'
            android:padding="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:id="@+id/llNoteNAV"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">
            <ImageButton
                android:id="@+id/ibNotePrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_keyboard_arrow_left_black_48dp"
                android:layout_weight="1"
                android:tint="@color/colorPrimary" />
            <ImageButton
                android:id="@+id/ibNoteNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_keyboard_arrow_right_black_48dp"
                android:layout_weight="1"
                android:tint="@color/colorPrimary" />
        </LinearLayout>


    </RelativeLayout>
</layout>